<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToCare</string>
    <string name="register_button">Don\'t have an account? <b>Register Here</b> </string>
    <string name="back_to_login"><b>Back to Login</b></string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email">Email</string>
    <string name="sing_in_to_continue">Sing in to continue</string>
    <string name="welcome_to_care">Welcome To Care</string>
    <string name="todo">TODO</string>
    <string name="register_now_to_continue">Register now to continue</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="register_now">Register Now</string>
    <string name="conform_password">Conform password</string>
    <string name="privatePermission">Private</string>
    <string name="test">short story, brief fictional prose narrative that is shorter than a novel and that usually deals with only a few characters. </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="Following">Following</string>
    <string name="Follow">Follow</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reset_password">Reset your password</string>
    <string name="submit">Submit</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="or_sing_up_with">Or sing-Up with</string>
    <string name="full_name">Full Name</string>
    <string name="profile">Profile</string>
    <string name="task">Tasks</string>
    <string name="notification">Notification</string>
    <string name="HelloUser">Hello User</string>
    <string name="title_profile">Profile</string>
    <string name="title_task">Task</string>
    <string name="title_calender">Calender</string>
    <string name="title_feed">Feed</string>
    <string name="fab_content_desc">None</string>
    <string name="title_setting">Setting</string>
    <string name="title_signOut">Log Out</string>


    <string name="facebook_app_id">919221845733311</string>
    <string name="fb_login_protocol_scheme">fb919221845733311</string>
    <string name="facebook_client_token">f767b7c592bccac93542b687780dd925</string>


    <string name="remind_to_take_a_break">Remind me to take a break</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="remind_me">Remind me to take a break</string>
    <string name="remind_me_for_bed_time">remind_me_for_bed_time</string>
    <string name="remind_for_bed_time">Remind me for bed time</string>
    <string name="limit_data_usage">prefs_limit_data_usage</string>
    <string name="stream_video">Only stream HD video on Wi-Fi</string>
    <string name="limit_mobile_usage">Limit mobile data usage</string>
    <string name="double_tap_to_seek">Double-tap to seek</string>
    <string name="pref_seek_val">pref_seek_val</string>
    <string name="seconds">seconds</string>
    <string name="uploads">Uploads</string>
    <string name="pref_uploads">pref_uploads</string>
    <string name="specify_network_prefs">Specify network preferences for uploads</string>
    <string name="prefs_restricted_mode">prefs_restricted_mode</string>
    <string name="prefs_enable_stats">prefs_enable_stats</string>
    <string name="enable_stats">Enable stats for nerds</string>
    <string name="notification_title">None</string>
    <string name="username">User name</string>
    <string name="root_background">root yellow background profile</string>
    <string name="emailOrPhone">Email or Phone number</string>
    <string name="title_manage_users">Manage users</string>
    <string name="Phone_number">Phone number</string>
    <string name="Code_number">Code Number</string>
    <string name="SendAgain">Resend Verification Code</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="add_a_comments">Add a Comments</string>
    <string name="Followers">Followers</string>
    <string name="bio">Bio</string>
    <string name="Message">Message</string>
    <string name="user_management">User Management</string>
    <string name="newUser">Create New User</string>
    <string name="forgetPassword">Reset Password</string>
    <string name="VerificationCode">Verification Code</string>
    <string name="NullImage">null</string>
    <string name="Sharabi">Sharabi</string>
    <string name="tapoh11" tools:ignore="Typos">tapoh11</string>
    <string name="barak">Barak</string>
    <string name="_0509367801">0509367801</string>
    <string name="bsharabi95_gmail_com">bsharabi95@gmail.com</string>
    <string name="_12s_sjjsd54">12s@sjJSD54</string>
    <string name="search" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="login_with_phone_number">Login with Phone number</string>
    <string name="login_with_email">Login with Email</string>
    <string name="home">Home</string>
    <string name="type">Type</string>
    <string name="start_date">Start Date</string>
    <string name="priority">Priority 0–12 </string>
    <string name="end_date">End Date</string>
    <string name="restricated_mode">d</string>
    <string name="restricated_mode_description">d</string>
    <string name="_0">0</string>
    <string name="editProfile">Edit Profile</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="In_Process">In Process</string>
    <string name="active">Active</string>
    <string name="share">Share</string>


    <string-array name="task_topics">
        <item>  Garbage Disposal</item>
        <item>  House Cleaning</item>
        <item>  Pet Care (e.g. taking the dog out for walks)</item>
        <item>  Lawn Maintenance</item>
        <item>  Grocery Shopping</item>
        <item>  Laundry</item>
        <item>  Dishwashing</item>
        <item>  Bed Making</item>
        <item>  Ironing</item>
        <item>  Organizing</item>
        <item>  Cooking and Meal Preparation</item>
        <item>  Car Maintenance</item>
        <item>  Home Repairs</item>
        <item>  Pest Control</item>
        <item>  Snow Removal</item>
        <item>  Pool Maintenance</item>
        <item>  Landscaping</item>
        <item>  Painting</item>
        <item>  Power Washing</item>
        <item>  Cleaning Windows</item>
        <item>  Cleaning Gutters</item>
        <item>  Cleaning Carpets</item>
        <item>  Cleaning Upholstery</item>
        <item>  Cleaning Appliances</item>
        <item>  Cleaning Bathrooms</item>
        <item>  Cleaning Kitchens</item>
        <item>  Cleaning Bedrooms</item>
        <item>  Cleaning Living Rooms</item>
        <item>  Cleaning Basements</item>
        <item>  Cleaning Attics</item>
        <item>  Cleaning Garages</item>
        <item>  Cleaning Driveways</item>
        <item>  Cleaning Decks</item>
        <item>  Cleaning Patios</item>
        <item>  Cleaning Walkways</item>
        <item>  Cleaning Porches</item>
        <item>  Cleaning Balconies</item>
        <item>  Cleaning Siding</item>
        <item>  Cleaning Roofs</item>
        <item>  Cleaning Outbuildings</item>
        <item>  Cleaning Boats and RVs</item>
        <item>  Cleaning Pools and Spas</item>
        <item>  Cleaning Hot Tubs</item>
        <item>  Cleaning Saunas</item>
        <item>  Cleaning Steam Rooms</item>
        <item>  Cleaning Gyms</item>
        <item>  Cleaning Yoga Studios</item>
        <item>  Cleaning Dance Studios</item>
        <item>  Cleaning Massage Rooms</item>
        <item>  Cleaning Salons</item>

    </string-array>


    <string-array name="pref_upload_quality_entries">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>
        <item>Original</item>
    </string-array>

    <string-array name="pref_remind_me_to_take_a_break">
        <item>1 hours</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>5 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="pref_seek_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string-array name="pref_duration">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="pref_uploads">
        <item>Only when on Wi-Fi</item>
        <item>On any network</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="new_post">New post</string>
    <string name="next">Next</string>
    <string name="topics">Topics</string>
    <string name="Public">Public</string>
    <string name="add_acomment">Add a comment…</string>
    <string name="_55_minutes_ago">55 minutes ago</string>
    <string name="_2_likes">2 likes</string>
    <string name="view_all_2_comments">View All 2 comments</string>
    <string name="bid">Bid</string>
    <string name="details">Details</string>


</resources>