<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/title_calender"/>

    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/ic_baseline_add_task_24"
        android:title="@string/title_task"/>
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_baseline_feed_24"
        android:title="@string/title_feed"/>
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/title_notifications"/>


    <item
    android:id="@+id/navigation_profile"
    android:icon="@drawable/ic_baseline_person_24"
    android:title="@string/title_profile"/>

</menu>

